kustomizations/basex-validator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basex-validator
spec:
  replicas: ${replicas:=1}
  strategy:
    rollingUpdate:
      maxUnavailable: ${maxUnavailable:=1}
  template:
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: basex-validator
          image: ghcr.io/elifesciences/basex-validator:latest
          resources:
            requests:
              cpu: 1.5
              memory: 3Gi
            limits:
              memory: 3Gi
          ports:
            - name: http
              containerPort: 8984
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            tcpSocket:
              port: http
