kustomizations/basex-validator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basex-validator
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 4m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
    traefik.ingress.kubernetes.io/service.serverstransport: basex-validator-transport@kubernetescrd
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: traefik
  rules:
  - host: ${hostname}
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: basex-validator
              port:
                number: 8984
  tls:
  - hosts:
    - ${hostname}
    secretName: basex-validator-tls
